gccida/c2/gen_call_value
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_call_value/src/insn-emit.c:14820:49: error: use of undeclared identifier 'machine_mode'
if ( call_insn_operand( operand1->fld[0].rtx, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_call_value/src/insn-emit.c:14828:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_call_value/src/obj/insn-emit.o] Error 1
